@@ -5,3 +5,11 @@ dependencies {
     implementation(project(":uplift-kernel"))
 }
 
+tasks.withType<JavaCompile>().all {
+    options.compilerArgs.addAll(listOf("--add-modules", "jdk.incubator.vector"))
+}
+
+tasks.withType<Test>().all {
+    options.compilerArgs.addAll(listOf("--add-modules", "jdk.incubator.vector"))
+}
+
